<resources>
    <string name="app_name">Neogen Softtech</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="neogen">NEOGEN</string>
    <string name="todo">TODO</string>
    <string name="soft_tech">SOFT TECH</string>
    <string name="consulting_amp_development"><![CDATA[Consulting & Development]]></string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_register">Already Register</string>
    <string name="already_sign_up">Already SIGN UP?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="trainingdevelopment">NEOGEN provide an outsourced method of employee instruction. NEOGEN operate by implementing development protocols and facilitating training courses, either onsite or virtually. NEOGEN offer general business, compliance, and soft skill development, as well as industry-specific knowledge. In addition to formal training and development activities, some providers offer informal training that emphasizes skills such as team building. Businesses will typically work with these providers in an effort to improve employee knowledge and increase productivity. Human resource departments usually coordinate directly with training and development services to design all training initiatives. Some businesses may choose to use training eLearning software to supplement programs or as an alternative to these services.</string>
    <string name="trainingdev1">Work with HR professionals and managers in creating customized employee training programs according to individual employee needs Provide training solutions that implement, manage, and track training programs \n \n Training and development initiatives are educational activities within an organization that are designed to improve the job performance of an individual or group. These programs typically involve advancing a worker’s knowledge and skill sets and instilling greater motivation to enhance job performance.\n \n Training programs can be created independently or with a learning administration system, with the goal of employee long-term development. Common training practices include orientations, classroom lectures, case studies, role playing, simulations and computer-based training, including e-learning. \n \n Sometimes referred to as Human Resource Development (HRD), most employee training and development efforts are driven by an organization’s HRD function. These efforts are roughly divided into two types of programs:</string>
    <string name="intro">To qualify for inclusion in the Training and Development category, a services provider must:\n</string>
    <string name="emptd">A strategic tool for improving business outcomes by implementing internal educational programs that advance employee growth and retention.</string>
    <string name="mantd">The practice of growing employees into managers and managers into effective leaders by the ongoing enhancement of certain knowledge, skills and abilities.\n Training and development initiatives are educational activities within an organization that are designed to improve the job performance of an individual or group. These programs typically involve advancing a worker’s knowledge and skill sets and instilling greater motivation to enhance job performance.</string>
    <string name="java">Java development services cover implementation of enterprise apps, software products, and SaaS solutions using secure, portable, and scalable Java frameworks. A Java application development company since 1998, ScienceSoft helps clients build sustainable Java-based software fast and cost-effectively.</string>
    <string name="dotnet">.NET software development services cover engineering and evolution of web, mobile, and desktop applications with the use of .NET platform. Mature and impact-focused, ScienceSoft builds robust .NET apps from scratch and modernizes legacy solutions fast and at 20-50% reduced costs.</string>
    <string name="networking">Computer networking refers to interconnected computing devices that can exchange data and share resources with each other. These networked devices use a system of rules, called communications protocols, to transmit information over physical or wireless technologies.</string>
    <string name="awt">AWT stands for Abstract window toolkit is an Application programming interface (API) for creating Graphical User Interface (GUI) in Java. It allows Java programmers to develop window-based applications. AWT provides various components like button, label, checkbox, etc. used as objects inside a Java Program. AWT components use the resources of the operating system, i.e., they are platform-dependent, which means, component’s view can be changed according to the view of the operating system. The classes for AWT are provided by the Java.awt package for various AWT components.</string>
    <string name="azure">Azure is a public cloud computing platform—with solutions including Infrastructure as a Service (IaaS), Platform as a Service (PaaS), and Software as a Service (SaaS) that can be used for services such as analytics, virtual computing, storage, networking, and much more.</string>
    <string name="salesforce">Salesforce professional services cover Salesforce consulting, implementation, support and other services aimed to maximize Salesforce potential for business.</string>
    <string name="powerbi">Power BI consulting services involve assistance with implementing and customizing a Power BI platform, as well as promptly upgrading the existing Power BI solution. As a result, businesses can translate their raw data into accurate analytics insights with rich visuals and compelling dashboards.</string>
    <string name="SAP">SAP solutions include a number of functional modules, which support transactions to execute key business processes, such as:
\n
1. Financial Accounting (FI) \n
2. Financial Supply Chain Management (FSCM) \n
3. Controlling (CO) \n
4. Materials Management (MM) \n
5. Sales and Distribution (SD) \n
6. Logistics Execution (LE) \n
7. Production Planning (PP) \n
8. Quality Management (QM) \n
9. Plant Maintenance (PM) \n
10. Project System (PS) \n
11. Human Resources (HR).
</string>
    <string name="cloud">Single pane of glass across distributed environments on-premise, in-cloud and multi-cloud to find ungoverned database instances, classify data, assess vulnerabilities, and investigate user activity.</string>
    <string name="secure">Unifies governance across on-premise and hybrid cloud environments and presents it all in a single view. Advanced analytics find threats before they become a compliance or security incident. Built-in data Security Orchestration, Automation and Response empowers you to remediate findings quickly. Security and compliance policies and controls are simple and centralized.</string>
    <string name="lightning">Speed incident resolution Detect both outsider and insider threats and automate response procedures Private Cloud computing has never been this easy. With a platform that helps you to set it up within days, and supports through a wide range of verticals from BFSI, E-Commerce,Retail and Manufacturing. When you need a Private Cloud deployment fast, it’s us.</string>
    <string name="implementations">Strategy and design required to implement your databases properly from day 1 Database Optimization and Tuning Identify and correct any existing issues, make sure you have the right security checks in place, and optimize your databases. Database Upgrades Minimize challenges, downtimes, and risks of upgrading critical databases Design and implementation of upgrades to optimize application integrations and long-term environment performance.</string>
    <string name="template"><![CDATA[Need a website quickly but don’t have enough time or skills to put into it? We got you covered. We help you with handcrafted website templates to help you build a cool site to meet your requirements? Our designers build templates from scratch. Our developers & DESIGNERS HELP you bring out a good-looking and functional website template]]></string>
    <string name="wordpress"><![CDATA[We have expertise in developing creative & unique website designs with WordPress, the content management system, and grow your business rapidly. With our creatives and unique ideas, a WordPress expert in Hyderabad can create high-performing and eye-catching website designs for your business growth and a better user experience. Our websites are easy to maintain and enrich with newsletter lists, plugins, new pages, and additional content. Build your business with us]]></string>
    <string name="responsive_web">Responsive web design is suitable for both types of devices mobile and desktop The layout of a responsive website remains the same on screens of all sizes and present data perfectly Our web designers know how to use HTML and CSS coding adequately for designing a fully responsive website We provide 100% satisfactory services by designing a website rich in user experience targeting potential customers effectively We earn the trust of clients with our fully transparent, quality, error-free, and unique services</string>
    <string name="ourcustomers">At Perfex, we strive to provide exactly what our customers are looking for. A huge part of our brainstorming process is looking at our client feedback to make sure you\'re well taken care of.</string>
    <string name="individualwebsite">With 93% of business decisions starting with a search engine search that means if you don\'t have a website/app, you are only selling to 7% of your market. That is right, you are reducing the potential size of your business by 93%.</string>
    <string name="inhousemade">We are personally committed to delivering the very best. Everything, from product design and development to customer support, is provided by our dedicated and adorable team.</string>
    <string name="neogen_softtech_solutions_is_an_iso_9001_2015_company_that_provides_unparalleled_and_cutting_edge_it_solutions_at_competitive_costs_to_enterprises_world_wide">Neogen Softtech Solutions is an ISO 9001:2015 Company that Provides Unparalleled and Cutting -edge IT Solutions at Competitive Costs to Enterprises world-wide.</string>
    <string name="a">NEO-GEN SOFT TECH SOLUTIONS, The Corpwork Plot no.81, Jubilee Enclave Hi-tech City, Hyderabad TS -500081</string>
    <string name="b">Neogen is a provider of Development and software development services. Having started as a small AI product company, we switched to IT services in 2022 and ever since we have helped non-IT organizations and software product companies.</string>
    <string name="abc">Mobile app development is the act or process by which a mobile app is developed for one or more mobile devices, which can include personal digital assistants (PDA), enterprise digital assistants (EDA), or mobile phones. Such software applications are specifically designed to run on mobile devices, taking numerous hardware constraints into consideration. Common constraints include CPU architecture and speeds, available memory (RAM), limited data storage capacities, and considerable variation in displays (technology, size, dimensions, resolution) and input methods (buttons, keyboard, touch screens with/without styluses). These applications (or ‘apps’) can be pre-installed on phones during manufacturing or delivered as web applications, using server-side or client-side processing (e.g., JavaScript) to provide an “application-like” experience within a web browser.</string>
</resources>